@@ -1,3 +1,8 @@
+2004-08-26  Graydon Hoare  <graydon@redhat.com>
+
+	* javax/swing/JColorChooser.java: 
+	Make a couple inner classes static, for jikes.
+
 2004-08-26  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/plaf/basic/BasicTextUI.java
